# manta-node

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: check.yml
client/: Cargo.toml
client/src/: main.rs
node/: Cargo.toml
pallets/basecoin/: Cargo.toml
pallets/basecoin/src/: lib.rs
pallets/manta-dap/: Cargo.toml  coin.json
pallets/manta-dap/benches/: manta_bench.rs
pallets/manta-dap/src/: crypto_types.rs  dap_setup.rs  dh.rs  lib.rs  param.rs  priv_coin.rs  types.rs  zkp.rs  zkp_types.rs
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
