[package]
name = "pallet-manta-dap"
version = "2.0.1"
authors = ["Manta Network <shumo@manta.network>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/manta-network/pallet-basecoin/"
description = "FRAME basecoin pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
# Needed for various traits. In our case, `OnFinalize`.
sp-runtime = { version = "2.0.1", default-features = false }
# Needed for type-safe access to storage DB.
frame-support = { version = "2.0.1", default-features = false }
# `system` module provides us with all sorts of useful stuff and macros depend on it being around.
frame-system = { version = "2.0.1", default-features = false }

[dev-dependencies]
sp-core = { version = "2.0.1", default-features = false }
sp-io = { version = "2.0.1", default-features = false }


[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
]
